# ndk-protobuf

./: LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  debug-keystore.jks  proguard-rules.pro
app/libs/armeabi-v7a/: canconfig  candump  canecho  cansend  cansequence
app/src/androidTest/java/com/xc/platform/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-api.cpp
app/src/main/cpp/probuf/inc/: adsimulate.pb.h
app/src/main/java/com/xc/platform/activities/: ActivityBase.java  MainActivity.java
app/src/main/java/com/xc/platform/protocol/support/: PlatformProvider.java
app/src/main/proto/: adsimulate.proto  build.bat  protobuf.sh
app/src/main/proto/bak/: adsimulate.pb.cpp
app/src/main/proto/debug/cpp/: adsimulate.pb.cc  adsimulate.pb.h
app/src/main/proto/debug/java/: Adsimulate.java
app/src/main/res/drawable/: double_line.xml  ic_add_alert_black_72dp.xml  ic_play_circle_outline_black_96dp.xml  ic_power_settings_new_black_96dp.xml  ic_scanner_black_72dp.xml  ic_stop_black_96dp.xml  radius.xml
app/src/main/res/layout/: activities_activity_main.xml
app/src/main/res/menu/: activities_menu_main_drawer.xml
app/src/main/res/values/: defaults.xml  dimens.xml  integers.xml  strings.xml  styleable.xml  styles.xml
app/src/main/res/values-v21/: strings.xml
app/src/test/java/com/xc/platform/: ExampleUnitTest.java
app/src/test/java/com/xc/platform/model/: FusedCalibparaFluidTest.java
gradle/wrapper/: gradle-wrapper.properties
